align colors/timings fix

--- a/css/style.css
+++ b/css/style.css
@@ -549,12 +549,12 @@ a:hover > i.material-icons {
 .icon-list li.active a,
 .icon-list li.active a span {
 	/* opacity: 1; */
-	color: var(--klr_shade1);
+	color: var(--klr_unicorn);
 }
 .icon-list li a:hover,
 .icon-list li a:hover span {
 	/* opacity: 0.7; */
-	color: var(--klr_unicorn);
+	color: var(--klr_shade2);
 }	
 
 /***********************************************/
